# conversion_msg_to_pdf

./: Dockerfile  README.md  fly.toml  pyproject.toml  render.yaml  requirements.txt  run_server.sh
api/: index.py
src/msg2pdf/: __init__.py  __main__.py
src/msg2pdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/msg2pdf/batch/: __init__.py  processor.py
src/msg2pdf/cli/: __init__.py  commands.py
src/msg2pdf/core/: __init__.py  converter.py  exceptions.py  models.py  parser.py  renderer.py
src/msg2pdf/templates/: email_full.html
src/msg2pdf/web/: __init__.py  app.py  routes.py
tests/: __init__.py  test_batch.py  test_converter.py  test_models.py  test_parser.py
wetransfer_combles-stendhal-msg_2026-02-04_1019/: RE  BC 23 C23 020252 TEST FUMIGENE TERRASSE 45 RUE STENDHAL 75020 PARIS DE2310403.msg  RE  Dossier d'oeuvres exécutées fenêtres Stendhal.msg  RE  INFILTRATION SURMELIN  DE2311212.msg  RE  Remplacement de l'isolant des combles du bureau 23-SSP 20.msg  RE  Remplacement de l'isolant des commbles du bureau 23-SSP 20.msg  RE  Tuile au dessus de la mezzanine de Stendhal .msg  RE  combles Stendhal.msg  RE Tuile au dessus de la mezzanine de Stendhal .msg  RE Tuile au dessus de la mezzanine de Stendhal .msg1.msg  TR  BC 23 C23 020252 TEST FUMIGENE TERRASSE 45 RUE STENDHAL 75020 PARIS DE2310403.msg  TR  Tuile au dessus de la mezzanine de Stendhal .msg  combles Stendhal.msg
